--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.3",
+    "pdfkit": "^0.17.2",
     "pg": "^8.17.2"
   },
   "devDependencies": {
